--- a/styles.css
+++ b/styles.css
@@ -51,7 +51,7 @@ body{
     display: flex;
 }
 
-.controls__colors .controls_color{
+.controls__colors .controls__color{
     width: 50px;
     height: 50px;
     border-radius: 25px;
